--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ raider.io_funnel_analysis/Defunct/tww_s2_runs.csv
 raider.io_funnel_analysis/Defunct/tww_s2_characters.csv
 raider.io_funnel_analysis/Defunct/runs_raw.parquet
 raider.io_funnel_analysis/Defunct/tww_s2.db
+portfolio_backup/
