--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ raider.io_funnel_analysis/Defunct/tww_s2.db
 portfolio_backup/
 raider.io_funnel_analysis/queries/test queries.sql
 raider.io_funnel_analysis/queries/test queries.sql
+/raider.io_funnel_analysis/Defunct/
